--- a/foundry.toml
+++ b/foundry.toml
@@ -5,9 +5,11 @@ libs = ["lib"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 
-# Zircuit Testnet Configuration
+# Network configurations
 [rpc_endpoints]
 zircuit_testnet = "https://garfield-testnet.zircuit.com"
+flow_testnet = "https://testnet.evm.nodes.onflow.org"
 
 [etherscan]
 zircuit_testnet = { key = "${ZIRCUIT_API_KEY}", url = "https://explorer.testnet.zircuit.com/api/contractVerifyHardhat", chain = 48899 }
+flow_testnet = { key = "${FLOW_API_KEY}", url = "https://evm-testnet.flowscan.io/api", chain = 545 }
